--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bmi_calculator
+name: bmi_calculator_for_adults
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -37,11 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_animate: ^4.5.0
   syncfusion_flutter_gauges: ^25.1.42
+  wheel_slider: ^1.2.1
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^4.0.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
